tooling/nargo_cli/tests/snapshots/execution_success/brillig_recursion/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u32) {
    // Safety: comment added by `nargo expand`
    unsafe {
        assert(fibonacci(x) == 55_u32);
    }
}

unconstrained fn fibonacci(x: u32) -> u32 {
    if x <= 1_u32 {
        x
    } else {
        fibonacci(x - 1_u32) + fibonacci(x - 2_u32)
    }
}
